--- a/KGERP/Views/BillRequisition/PMBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/PMBRApproveSlave.cshtml
@@ -124,7 +124,7 @@
                                                         @Html.HiddenFor(model => model.DetailDataList[i].BillRequisitionMasterId)
                                                         @(++sl)
                                                     </td>
-                                                    <td style="padding:5px;text-align:left;">@item.ItemName</td>
+                                                    <td style="padding:5px;text-align:left;">@item.ProductName</td>
                                                     <td style="padding: 5px; text-align: left;">@item.UnitName</td>
                                                     <td style="padding:5px;text-align:right;">@String.Format("{0:0.00}", item.EstimatedQty)</td>
                                                     <td style="padding: 5px; text-align: right;">@String.Format("{0:0.00}", item.ReceivedSoFar)</td>
@@ -147,6 +147,15 @@
                                         </tfoot>
 
 
+                                    </table>
+                                    <table class="table table-bordered">
+                                            <tr class="bg-success">
+                                                @foreach (var item in Model.ApprovalModelList)
+                                                {
+                                                    <th style="padding:5px;text-align:center;">@item.SignatoryName</th>
+                                                    <td style="padding:5px;text-align:center;">@item.AprrovalStatusName</td>
+                                                }
+                                            </tr>
                                     </table>
 
                                 </div>
