Table schema added in model.text file

--- a/KGERP/Views/BillRequisition/BillRequisitionItemBoQMap.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionItemBoQMap.cshtml
@@ -132,7 +132,7 @@
                                             <input type="hidden" id="requisitionBoQ_@item.BoQItemId" name="BoQItemId" value="@item.BoQItemId" />
                                         </td>
                                         <td id="tdBoQItemName_@item.BoQItemId"></td>
-                                        <td id="tdBoQName_@item.BoQItemId">@item.Name</td>
+                                        <td id="tdBoQName_@item.BoQItemId"></td>
                                         <td id="tdBoQItemName_@item.BoQItemId"></td>
                                         <td id="tdEstimateQty_@item.BoQItemId" class="text-center"></td>
                                         <td id="tdEstimateAmount_@item.BoQItemId" class="text-center"></td>
@@ -151,7 +151,7 @@
                                             <input type="hidden" id="requisitionBoQ_@item.BoQItemId" name="BoQItemId" value="@item.BoQItemId" />
                                         </td>
                                         <td id="tdBoQItemName_@item.BoQItemId"></td>
-                                        <td id="tdBoQName_@item.BoQItemId">@item.Name</td>
+                                        <td id="tdBoQName_@item.BoQItemId">@item</td>
                                         <td id="tdBoQItemName_@item.BoQItemId"></td>
                                         <td id="tdEstimateQty_@item.BoQItemId" class="text-center"></td>
                                         <td id="tdEstimateAmount_@item.BoQItemId" class="text-center"></td>
